--- a/public/views/app/app.component.html
+++ b/public/views/app/app.component.html
@@ -1,1 +1,16 @@
+<!--
+<div class="row">
+    <div class="col-lg-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Apache - Top request duration</h3>
+            </div>
+            <div class="panel-body">
+                <bar-chart [name]="'lamptop:Database-Duration'"></bar-chart>
+            </div>
+        </div>
+    </div>
+</div>
+-->
+
 <gridstack></gridstack>
