--- a/resources/assets/templates/app/app.component.html
+++ b/resources/assets/templates/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="row">
     <div class="col-lg-6">
         <div class="panel panel-default">
@@ -10,3 +11,6 @@
         </div>
     </div>
 </div>
+-->
+
+<gridstack></gridstack>
