--- a/resources/assets/templates/gridstack/gridstack.component.html
+++ b/resources/assets/templates/gridstack/gridstack.component.html
@@ -1,14 +1,22 @@
 <div class="grid-stack">
-    <div class="grid-stack-item"
-        data-gs-x="0" data-gs-y="0"
-        data-gs-width="4" data-gs-height="4">
-            <div class="grid-stack-item-content">
+    <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="6" data-gs-height="5">
+        <div class="panel panel-info grid-stack-item-content">
+            <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Apache - Top request duration</h3>
             </div>
+            <div class="panel-body">
+                <bar-chart [name]="'lamptop:Database-Duration'"></bar-chart>
+            </div>
+        </div>
     </div>
-    <div class="grid-stack-item"
-        data-gs-x="4" data-gs-y="0"
-        data-gs-width="4" data-gs-height="4">
-            <div class="grid-stack-item-content">
+    <div class="grid-stack-item" data-gs-x="6" data-gs-y="0" data-gs-width="6" data-gs-height="5">
+        <div class="panel panel-default grid-stack-item-content">
+            <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Apache - Top request duration</h3>
             </div>
+            <div class="panel-body">
+                <bar-chart [name]="'lamptop:Table-Duration'"></bar-chart>
+            </div>
+        </div>
     </div>
 </div>
