Added flamegraph integration for PHP

--- a/resources/templates/gridstack/gridstack.component.html
+++ b/resources/templates/gridstack/gridstack.component.html
@@ -7,7 +7,7 @@
                 </h3>
             </div>
             <div class="panel-body">
-                <chart [name]="gridItem.name" [type]="gridItem.chartType"></chart>
+                <chart [name]="gridItem.name" [type]="gridItem.chartType" [count]="gridItem.count" [sort]="gridItem.sort"></chart>
             </div>
         </div>
     </div>
