Updated MySQL dashboard view and added CPU dashboard

--- a/resources/templates/app/app.component.html
+++ b/resources/templates/app/app.component.html
@@ -24,7 +24,7 @@
                     <a [routerLink]="['/php']"><i class="fa fa-fw fa-file-code-o "></i> PHP</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/cpu-usage']"><i class="fa fa-fw fa-desktop"></i> CPU Usage</a>
+                    <a [routerLink]="['/cpu']"><i class="fa fa-fw fa-desktop"></i> CPU Usage</a>
                 </li>
                 <li>
                     <a data-toggle="collapse" data-target="#io"><i class="fa fa-fw fa-arrows-v"></i> I/O Dashboard<i class="fa fa-fw fa-caret-down"></i></a>
