--- a/resources/templates/cpu-dashboard/cpu-dashboard.component.html
+++ b/resources/templates/cpu-dashboard/cpu-dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">MySQL Dashboard
+                <h1 class="page-header">CPU Dashboard
                     <a class="btn btn-primary pull-right" href="#"><i class="fa fa-plus" aria-hidden="true"></i> Add Widget</a>            
                 </h1>
             </div>
