--- a/resources/templates/app/app.component.html
+++ b/resources/templates/app/app.component.html
@@ -21,19 +21,27 @@
                     <a [routerLink]="['/mysql']"><i class="fa fa-fw fa-table"></i> MySQL</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/php']"><i class="fa fa-fw fa-file-code-o "></i> PHP</a>
+                    <a data-toggle="collapse" data-target="#php"><i class="fa fa-fw fa-arrows-v"></i> PHP Dashboards<i class="fa fa-fw fa-caret-down"></i></a>
+                    <ul id="php" class="collapse">
+                        <li>
+                            <a [routerLink]="['/php']"><i class="fa fa-fw fa-file-code-o "></i> PHP main dashboard</a>
+                        </li>
+                        <li>
+                            <a [routerLink]="['/php-flamegraph']"><i class="fa fa-fw fa-line-chart"></i> PHP flamegraph</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a [routerLink]="['/cpu']"><i class="fa fa-fw fa-desktop"></i> CPU Usage</a>
                 </li>
                 <li>
-                    <a data-toggle="collapse" data-target="#io"><i class="fa fa-fw fa-arrows-v"></i> I/O Dashboard<i class="fa fa-fw fa-caret-down"></i></a>
+                    <a data-toggle="collapse" data-target="#io"><i class="fa fa-fw fa-arrows-v"></i> I/O Dashboards<i class="fa fa-fw fa-caret-down"></i></a>
                     <ul id="io" class="collapse">
                         <li>
                             <a [routerLink]="['/io-usage']"><i class="fa fa-fw fa-file"></i> I/O Usage</a>
                         </li>
                         <li>
-                            <a [routerLink]="['/io-lattency']"><i class="fa fa-fw fa-line-chart"></i> I/O Latency</a>
+                            <a [routerLink]="['/io-latency']"><i class="fa fa-fw fa-line-chart"></i> I/O Latency</a>
                         </li>
                     </ul>
                 </li>
