--- a/resources/templates/io-dashboard/io-usage-dashboard.component.html
+++ b/resources/templates/io-dashboard/io-usage-dashboard.component.html
@@ -2,8 +2,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">PHP Dashboard
-                    <a class="btn btn-primary pull-right" (click)="addChartGridItem()" href="#"><i class="fa fa-plus" aria-hidden="true"></i> Add Widget</a>            
+                <h1 class="page-header">I/O Usage Dashboard
+                    <a class="btn btn-primary pull-right" href="#"><i class="fa fa-plus" aria-hidden="true"></i> Add Widget</a>            
                 </h1>
             </div>
         </div>
